@@ -43,6 +43,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18574: Fixed handling of 100-continue reply from server in
+  http.client.HTTPConnection. Patch by Nikolaus Rath.
+
 - Issue #20270: urllib.urlparse now supports empty ports.
 
 - Issue #20243: TarFile no longer raise ReadError when opened in write mode.
